fix overflow

--- a/html/themes/materialize/css/user.css
+++ b/html/themes/materialize/css/user.css
@@ -40,7 +40,7 @@
 /* Content */
 
 .user-info .content-wrapper {
-    overflow: auto;
+    overflow-y: auto;
     height: calc(100vh - 274px);
     padding: 0 24px;
 }
@@ -59,7 +59,7 @@
 }
 
 .user-image .preview-image img {
-    overflow: hidden;
+    overflow-y: hidden;
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
